Frontend/src/pages/css/Profile.css
.header {
  background-color: black;
  height: 100px;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header h3{
  color: white;
}

.header svg{
  cursor: pointer;
    position: fixed;
      top: 20px;
      left: 10px;
      width: 25px;
      height: 25px;
      fill: #fe854c;
}

.profile main{
  padding-inline: 20px;
}

.pic-button{
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin-top: -10px;
  margin-bottom: 20px;
 
}

.profile main div img {
  width: 80%;
    margin: 7px 6px;
}

.img-container {
  background-color: white;
outline: 4px solid white
}

.profile main button {
      cursor: pointer;
        padding: 5px 10px ;
        border-radius: 20px;
        border-style: none;
        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
        background-color: #fe854c;
        color: white;
        font-size: 14px;
}

.profile-info{
 
  border-bottom: 1px solid rgb(224, 224, 224);
}

.profile-info h4 {
  font-weight: lighter;
  color: grey;
  margin-bottom: 10px;
}

.profile-info p{
  margin-bottom: 10px;
  font-size: 20px;
}

.follow{
  display: flex;
  align-items: center;
  gap: 20px;
}

.follow p{
  color: grey;
  font-size: 15px;
}

.likes-quacks {
  display: flex;
  gap: 30px;
}

.likes-quacks h3{
    cursor: pointer;
  font-weight:400;
}

.active-button{

border-bottom: 2px solid #fe854c;
}

